--- a/part1/unicafe/src/styles.css
+++ b/part1/unicafe/src/styles.css
@@ -3,4 +3,8 @@ body {
     font-family: sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
+}
+
+h4 {
+    padding-top: 40px;
+}
